[DevTools] Fix DevTools reattaching after crash

Bug: 793214
Change-Id: I0e2899acdc9fa890552455968c1dc00389cd224c
Reviewed-on: https://chromium-review.googlesource.com/833170
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524858}
Former-commit-id: 352d3a4dd9cc13e55a7d6145a7a1400466fd23ec